--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
-torch==1.10.0
-torchvision==0.11.1
-catalyst==22.02.1
-albumentations==1.1.0
-captum==0.4.1
-path
-requests
-pandas
-imageio
-imageio-ffmpeg
-tensorboard
-# x-transformers
-animus
-optuna
-scikit-learn
-h5py
 apto==0.0.2
+h5py
+path
+wandb
+tqdm
+# torch==1.10.0
+# torchvision==0.11.1
+# catalyst==22.02.1
+# albumentations==1.1.0
+# captum==0.4.1
+# path
+# requests
+# pandas
+# imageio
+# imageio-ffmpeg
+# tensorboard
+# # x-transformers
+# animus
+# optuna
+# scikit-learn
+# h5py
